--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-on: 
+on:
   push:
     branches:
       - main
     paths-ignore:
-      - '_Docs/'
+      - '_Docs/**'
       - '.env'
 
 name: 🚀 Deploy website on push
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-    
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
